--- a/rickroll-popup.html
+++ b/rickroll-popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title of the document</title>
+    <title>You've been Rickrolled!</title>
     <style>
       * {
         box-sizing: border-box;
@@ -74,8 +74,7 @@
     <h2>Popup Form</h2>
     <p>Click on the "Open Form" button to open the popup form.</p>
     <div class="openBtn">
-      <button class="openButton" onclick="openForm()"><strong>Open Form</strong></button>
-    </div>
+	<meta http-equiv="Refresh" content="0; url='openForm()'" />
     <div class="loginPopup">
       <div class="formPopup" id="popupForm">
         <form action="/action_page.php" class="formContainer">
