--- a/rickroll-popup.html
+++ b/rickroll-popup.html
@@ -74,7 +74,7 @@
     <h2>Popup Form</h2>
     <p>Click on the "Open Form" button to open the popup form.</p>
     <div class="openBtn">
-	<meta http-equiv="Refresh" content="0; url='openForm()'" />
+	<meta http-equiv="Refresh" content="0; action='openForm()'" />
     <div class="loginPopup">
       <div class="formPopup" id="popupForm">
         <form action="/action_page.php" class="formContainer">
