--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <div>
     <h1>Hello!</h1>
     <p>Test... Test!</p>
-    <p><a href="/assets/images/rickroll.jpg">More information...</a></p>
+    <p><a href="/assets/images/rickrolled.jpg">Click here for something cool!</a></p>
 </div>
 </body>
 </html>
