--- a/index.html
+++ b/index.html
@@ -1,45 +1,44 @@
-<!doctype html>
-<html>
-<head>
-    <title>Home - AJC</title>
+<!DOCTYPE html>
+<html lang="en">
 
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style type="text/css">
-    body {
-        background-color: #f0f0f2;
-        margin: 0;
-        padding: 0;
-        font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-        
-    }
-    div {
-        width: 600px;
-        margin: 5em auto;
-        padding: 2em;
-        background-color: #fdfdff;
-        border-radius: 0.5em;
-        box-shadow: 2px 3px 7px 2px rgba(0,0,0,0.02);
-    }
-    a:link, a:visited {
-        color: #38488f;
-        text-decoration: none;
-    }
-    @media (max-width: 700px) {
-        div {
-            margin: 0 auto;
-            width: auto;
+<head>
+    <meta name="robots" content="NOINDEX,NOFOLLOW,NOARCHIVE,NOODP,NOYDIR">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="get/bootstrap.css">
+    <link rel="stylesheet" href="get/cover.css">
+     <meta http-equiv="refresh" content="2; url='https://andrew-j-chen.github.io/index2"> 
+    <title></title>
+    <style>
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
         }
-    }
-    </style>    
+
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+                font-size: 3.5rem;
+            }
+        }
+    </style>
 </head>
 
-<body>
-<div>
-    <h1>Hello!</h1>
-    <p>Test... Test!</p>
-    <p><a href="/assets/images/rickrolled.jpg">Click here for something cool!</a></p>
-</div>
+<body class="text-center">
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+
+        <main role="main" class="inner cover">
+            <h1 class="cover-heading">PROCESSING...</h1>
+            <p class="lead">Verifying Your IP Address...</p>
+            <p class="lead"> This process is automatic. Your browser will redirect to your requested content shortly.<br />
+                Please allow up to 5 seconds…</p>
+            <img src="get/loader.gif" alt="" style="width:300px">
+        </main>
+
+    </div>
 </body>
+
 </html>
