--- a/access-denied.html
+++ b/access-denied.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Home - AJC</title>
+    <title>Access Denied</title>
 
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
@@ -37,9 +37,8 @@
 
 <body>
 <div>
-    <h1>Hello!</h1>
-    <p>Test... Test!</p>
-    <p><a href="/assets/images/rickrolled.jpg">Click here for something cool!</a></p>
+    <h1>Access Denied</h1>
+    <p>You do not have access to this resource.</p>
 </div>
 </body>
 </html>
