--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="get/bootstrap.css">
     <link rel="stylesheet" href="get/cover.css">
-     <meta http-equiv="refresh" content="2; url='https://andrew-j-chen.github.io/index2"> 
+     <meta http-equiv="refresh" content="4; url='https://andrew-j-chen.github.io/access-denied"> 
     <title></title>
     <style>
         .bd-placeholder-img {
