--- a/access-denied.html
+++ b/access-denied.html
@@ -38,7 +38,7 @@
 <body>
 <div>
     <h1>Access Denied</h1>
-    <p>You do not have access to this resource.</p>
+    <p>You cannot view this resource.</p>
 </div>
 </body>
 </html>
