--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="get/bootstrap.css">
     <link rel="stylesheet" href="get/cover.css">
-     <meta http-equiv="refresh" content="4; url='https://andrew-j-chen.github.io/access-denied"> 
+     <meta http-equiv="refresh" content="6; url='https://andrew-j-chen.github.io/access-denied"> 
     <title></title>
     <style>
         .bd-placeholder-img {
@@ -31,10 +31,8 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 
         <main role="main" class="inner cover">
-            <h1 class="cover-heading">PROCESSING...</h1>
-            <p class="lead">Verifying Your IP Address...</p>
-            <p class="lead"> This process is automatic. Your browser will redirect to your requested content shortly.<br />
-                Please allow up to 5 seconds…</p>
+            <h1 class="cover-heading">Verifying your IP Address</h1>
+            <p class="lead">This process is automatic. Your browser will redirect to the requested page shortly.</p>
             <img src="get/loader.gif" alt="" style="width:300px">
         </main>
 
