--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <main role="main" class="inner cover">
             <h1 class="cover-heading">Verifying your IP Address</h1>
-            <p class="lead">This process is automatic. Your browser will redirect to the requested page shortly.</p>
+            <p class="lead">This process is automatic. Your browser will redirect you to the requested page shortly.</p>
             <img src="get/loader.gif" alt="" style="width:300px">
         </main>
 
