--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="get/bootstrap.css">
     <link rel="stylesheet" href="get/cover.css">
      <meta http-equiv="refresh" content="6; url='https://andrew-j-chen.github.io/access-denied"> 
-    <title></title>
+    <title>ㅤ</title>
     <style>
         .bd-placeholder-img {
             font-size: 1.125rem;
