--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="robots" content="NOINDEX,NOFOLLOW,NOARCHIVE,NOODP,NOYDIR">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="get/bootstrap.css">
-    <link rel="stylesheet" href="get/cover.css">
-     <meta http-equiv="refresh" content="6; url='https://andrew-j-chen.github.io/access-denied"> 
+    <link rel="stylesheet" href="style/bootstrap.css">
+    <link rel="stylesheet" href="style/cover.css">
+     <meta http-equiv="refresh" content="6; url='https://andrew-j-chen.github.io/index2"> 
     <title>AJC</title>
     <style>
         .bd-placeholder-img {
@@ -33,7 +33,7 @@
         <main role="main" class="inner cover">
             <h1 class="cover-heading">Verifying your IP Address</h1>
             <p class="lead">This process is automatic. Your browser will redirect you to the requested page shortly.</p>
-            <img src="get/loader.gif" alt="" style="width:300px">
+            <img src="assets/media/images/loading.gif" alt="" style="width:300px">
         </main>
 
     </div>
