--- a/index.html
+++ b/index.html
@@ -1,42 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<!doctype html>
+<html>
 <head>
-    <meta name="robots" content="NOINDEX,NOFOLLOW,NOARCHIVE,NOODP,NOYDIR">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/bootstrap.css">
-    <link rel="stylesheet" href="style/cover.css">
-     <meta http-equiv="refresh" content="6; url='https://andrew-j-chen.github.io/index2"> 
-    <title>AJC</title>
-    <style>
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-        }
+    <title>Website in the Making...</title>
 
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-            }
+    <meta charset="utf-8" />
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style type="text/css">
+    body {
+        background-color: #f0f0f2;
+        margin: 0;
+        padding: 0;
+        font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        
+    }
+    div {
+        width: 600px;
+        margin: 5em auto;
+        padding: 2em;
+        background-color: #fdfdff;
+        border-radius: 0.5em;
+        box-shadow: 2px 3px 7px 2px rgba(0,0,0,0.02);
+    }
+    a:link, a:visited {
+        color: #38488f;
+        text-decoration: none;
+    }
+    @media (max-width: 700px) {
+        div {
+            margin: 0 auto;
+            width: auto;
         }
-    </style>
+    }
+    </style>    
 </head>
 
-<body class="text-center">
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-
-        <main role="main" class="inner cover">
-            <h1 class="cover-heading">Verifying your IP Address</h1>
-            <p class="lead">This process is automatic. Your browser will redirect you to the requested page shortly.</p>
-            <img src="assets/media/images/loading.gif" alt="" style="width:300px">
-        </main>
-
-    </div>
+<body>
+<div>
+    <h1>Website in the Making!</h1>
+    <p>This website isn't finished yet, check back later!</p>
+	<p>Looking for a specific page? Type that in the URL bar to view it!</p>
+	<p></p>
+</div>
 </body>
-
 </html>
