--- a/kiosk/homepage.html
+++ b/kiosk/homepage.html
@@ -42,7 +42,7 @@
 	<br>
 	<p><strong>Quick Links:</strong></p>
     <p><a href="https://ajchen.page.link/MPV4">> Continue to Google</a></p>
-	<p><a href="/terms">> Terms of Kiosk Use</a></p>
+	<p><a href="/terms">> Kiosk Terms of Use</a></p>
 	<p><a href="/privacy">> Kiosk Privacy Policy</a></p>
 	<p><a href="/">> AJC Homepage</a></p>
 </div>
