--- a/index.html
+++ b/index.html
@@ -37,10 +37,14 @@
 
 <body>
 <div>
-    <h1>Website in the Making!</h1>
-    <p>This website isn't finished yet, check back later!</p>
+    <h1>Future home of something quite cool...</h1>
+    <p>This website isn't finished yet, check back later! (Error Code: SITE_NOT_FINISHED)</p>
 	<p>Looking for a specific page? Type that in the URL bar to view it!</p>
-	<p></p>
+	<br>
+	<p><strong>Quick Links</strong></p>
+	<p><a href="/sitemap.xml">> Sitemap (Which hasen't even been made yet)</a></p>
+	<p><a href="/contact">> Contact Me</a></p>
+	<p><a href="https://ajchen.page.link/MPV4">> Google</a></p>
 </div>
 </body>
 </html>
