--- a/kiosk/homepage.html
+++ b/kiosk/homepage.html
@@ -40,7 +40,7 @@
     <h1>Welcome to the Kiosk!</h1>
     <p>You are logged in to the CZ Kiosk! The Chen Family is not liable for any of your actions on this computer. Contact IT at <a href="https://ajchen.page.link/eBWp">219.552.1088</a> with any questions.</p>
 	<br>
-	<p><strong>Quick Links:</strong></p>
+	<p><strong>Quick Links</strong></p>
     <p><a href="https://ajchen.page.link/MPV4">> Continue to Google</a></p>
 	<p><a href="/terms">> Kiosk Terms of Use</a></p>
 	<p><a href="/privacy">> Kiosk Privacy Policy</a></p>
