--- a/sitemap.xml.html
+++ b/sitemap.xml.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Website in the Making!</title>
+    <title>Sitemap Coming Soon!</title>
 
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
@@ -37,14 +37,8 @@
 
 <body>
 <div>
-    <h1>Future home of something quite cool...</h1>
-    <p>This website isn't finished yet, check back later! (Error Code: SITE_NOT_FINISHED)</p>
-	<p>Looking for a specific page? Type that in the URL bar to view it!</p>
-	<br>
-	<p><strong>Quick Links</strong></p>
-	<p><a href="/sitemap.xml">> Sitemap</a></p>
-	<p><a href="/contact">> Contact Me</a></p>
-	<p><a href="https://ajchen.page.link/MPV4">> Google</a></p>
+    <h1>Coming Soon!</h1>
+    <p>We haven't gotten around to making a sitemap yet, but you should expect it soon in the future!</p>
 </div>
 </body>
 </html>
