--- a/sitemap.xml.html
+++ b/sitemap.xml.html
@@ -38,7 +38,7 @@
 <body>
 <div>
     <h1>Coming Soon!</h1>
-    <p>We haven't gotten around to making a sitemap yet, but you should expect it soon in the future!</p>
+    <p>We haven't gotten around to making a sitemap yet, but you should expect it sometime soon in the future!</p>
 </div>
 </body>
 </html>
