--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Contact Me</title>
-</head>
-<body>
-<iframe width="640px" height= "480px" src= "https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAO__QibLX9UNzg5NjRPWkk5UDBHMFc5QzgwRElBMTZTWS4u&embed=true" frameborder= "0" marginwidth= "0" marginheight= "0" style= "border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
-</body>
+  <head>
+    <meta http-equiv="refresh" content="0; url='https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAO__QibLX9UNzg5NjRPWkk5UDBHMFc5QzgwRElBMTZTWS4u'" />
+  </head>
+  <body>
+    <p>Creating your form now...</p>
+	<p>Verifying your IP address...</p>
+	<p>Success!</p>
+	<p>Redirecting you now...</p>
+  </body>
 </html>
