--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAO__QibLX9UNzg5NjRPWkk5UDBHMFc5QzgwRElBMTZTWS4u'" />
+    <meta http-equiv="refresh" content="1" url='https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAO__QibLX9UNzg5NjRPWkk5UDBHMFc5QzgwRElBMTZTWS4u'" />
   </head>
   <body>
-    <p>Creating your form now...</p>
-	<p>Verifying your IP address...</p>
-	<p>Success!</p>
-	<p>Redirecting you now...</p>
+    <p>Generating your form link...</p>
   </body>
 </html>
