--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
 <body>
 <div>
-    <h1>Future home of something quite cool...</h1>
-    <p>This website isn't finished yet, check back later! (Error Code: SITE_NOT_FINISHED)</p>
-	<p>Looking for a specific page? Type that in the URL bar to view it!</p>
+    <h1>Future home of something cool</h1>
+    <p>This website isn't finished yet, check back later!</p>
+	<p>Looking for a specific page? Type the link in the URL bar to view it!</p>
 	<br>
 	<p><strong>Quick Links</strong></p>
 	<p><a href="/sitemap.xml">> Sitemap</a></p>
