--- a/kiosk/homepage.html
+++ b/kiosk/homepage.html
@@ -38,7 +38,8 @@
 <body>
 <div>
     <h1>Welcome to the Kiosk!</h1>
-    <p>You are logged in to the CZ Kiosk! The Chen Family is not liable for any of your actions on this computer. Contact IT at <a href="https://ajchen.page.link/eBWp">219.552.1088</a> with any questions.</p><br>
+    <p>You are logged in to the CZ Kiosk! Contact IT at <a href="https://ajchen.page.link/eBWp">219.552.1088</a> with any questions.</p><br>
+	<p>Disclaimer: The Chen Family is not liable for any of your actions on this computer. By leaving this page, you are agreeing with the <p><a href="/terms">Kiosk Terms of Use</a></p> and the <p><a href="/privacy">Kiosk Privacy Policy</a></p></p><br>
 	<p><em>This kiosk will reset itself after five minutes of inactivity.</em></p>
 	<br>
 	<p><strong>Quick Links</strong></p>
