--- a/kiosk/homepage.html
+++ b/kiosk/homepage.html
@@ -39,13 +39,15 @@
 <div>
     <h1>Welcome to the Kiosk!</h1>
     <p>You are logged in to the CZ Kiosk! Contact IT at <a href="https://ajchen.page.link/eBWp">219.552.1088</a> with any questions.</p>
-	<p>The Chen Family is not liable for any of your actions on this computer. By leaving this page, you are agreeing to the <a href="/terms">Kiosk Terms of Use</a> and the <a href="/privacy">Kiosk Privacy Policy</a></p><br>
+	<p>The Chen Family is not liable or responsible for any of your actions on this computer. By leaving this page, you are agreeing to the <a href="/terms">Kiosk Terms of Use</a> and the <a href="/privacy">Kiosk Privacy Policy</a></p><br>
 	<p><em>This kiosk will reset after five minutes of inactivity and your data will be removed.</em></p>
 	<br>
 	<p><strong>Quick Links</strong></p>
     <p><a href="https://ajchen.page.link/MPV4">> Continue to Google</a></p>
 	<p><a href="/terms">> Kiosk Terms of Use</a></p>
 	<p><a href="/privacy">> Kiosk Privacy Policy</a></p>
+	<p><a href="/sitemap.xml">> Sitemap</a></p>
+	<p><a href="/contact">> Contact Me</a></p>
 	<p><a href="/">> AJC Homepage</a></p>
 </div>
 </body>
