--- a/kiosk/homepage.html
+++ b/kiosk/homepage.html
@@ -40,7 +40,7 @@
     <h1>Welcome to the Kiosk!</h1>
     <p>You are logged in to the CZ Kiosk! Contact IT at <a href="https://ajchen.page.link/eBWp">219.552.1088</a> with any questions.</p>
 	<p>The Chen Family is not liable or responsible for any of your actions on this computer. By leaving this page, you are agreeing to the <a href="/terms">Kiosk Terms of Use</a> and the <a href="/privacy">Kiosk Privacy Policy</a></p>
-	<p><em>This kiosk will reset after five minutes of inactivit.</em></p>
+	<p><em>This kiosk will reset after five minutes of inactivity.</em></p>
 	<br>
 	<p><strong>Quick Links</strong></p>
     <p><a href="https://ajchen.page.link/MPV4">> Continue to Google</a></p>
