--- a/kiosk/homepage.html
+++ b/kiosk/homepage.html
@@ -42,7 +42,7 @@
 	<p>The Chen Family is not liable or responsible for any of your actions on this computer. By leaving this page, you are agreeing to the <a href="/terms">Kiosk Terms of Use</a> and the <a href="/privacy">Kiosk Privacy Policy</a></p>
 	<p><em>This kiosk will reset after five minutes of inactivity.</em></p>
 	<br>
-	<p><strong>Quick Links</strong></p>
+	<p><strong>Links</strong></p>
     <p><a href="https://ajchen.page.link/MPV4">> Continue to Google</a></p>
 	<p><a href="/terms">> Kiosk Terms of Use</a></p>
 	<p><a href="/privacy">> Kiosk Privacy Policy</a></p>
