--- a/kiosk/homepage.html
+++ b/kiosk/homepage.html
@@ -39,16 +39,15 @@
 <div>
     <h1>Welcome to the Kiosk!</h1>
     <p>You are logged in to the CZ Kiosk! Contact IT at <a href="https://ajchen.page.link/eBWp">219.552.1088</a> with any questions.</p>
-	<p>The Chen Family is not liable or responsible for any of your actions on this computer. By leaving this page, you are agreeing to the <a href="/terms">Kiosk Terms of Use</a> and the <a href="/privacy">Kiosk Privacy Policy</a></p>
-	<p>This kiosk will reset after five minutes of inactivity.</p>
+	<p>The Chen Family is not liable for any of your actions on this computer. By navigating away from this page, you are agreeing to the kiosk <a href="/terms">Terms of Use</a> and <a href="/privacy">Privacy Policy</a>.</p>
+	<p>This kiosk session will end after five minutes of inactivity. Log out when you are finished by closing the window, pressing CTRL+SHIFT+W, or <p><a onclick="window.close();">clicking here</a></p>.</p>
 	<br>
-	<p><strong>Links</strong></p>
-    <p><a href="https://ajchen.page.link/MPV4">> Continue to Google</a></p>
-	<p><a href="/terms">> Kiosk Terms of Use</a></p>
-	<p><a href="/privacy">> Kiosk Privacy Policy</a></p>
-	<p><a href="/sitemap.xml">> Sitemap</a></p>
+	<p><strong>Quick Links</strong></p>
+    <p><a href="https://ajchen.page.link/MPV4">> Google</a></p>
 	<p><a href="/contact">> Contact Me</a></p>
 	<p><a href="/">> AJC Homepage</a></p>
+	<p><a href="chrome://newtab" target="_blank" rel="noopener noreferrer">New Tab</a></p>
+	<p><a onclick="window.close();">> End Session</a></p>
 </div>
 </body>
 </html>
