--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,4 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="refresh" content="1" url='https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAO__QibLX9UNzg5NjRPWkk5UDBHMFc5QzgwRElBMTZTWS4u'" />
-  </head>
-  <body>
-    <p>Generating your form link...</p>
-  </body>
+<meta http-equiv="Refresh" content="0; url='https://ajchen.page.link/54Pm'" />
 </html>
