--- a/kiosk/homepage.html
+++ b/kiosk/homepage.html
@@ -46,8 +46,7 @@
     <p><a href="https://ajchen.page.link/MPV4">> Google</a></p>
 	<p><a href="/contact">> Contact Me</a></p>
 	<p><a href="/">> AJC Homepage</a></p>
-	<p><a href="chrome://newtab" target="_blank" rel="noopener noreferrer">New Tab</a></p>
-	<p><a onclick="window.close();">> End Session</a></p>
+	<p><a href="/assets/function-pages/kiosk-sessionend">> End Kiosk Session</a></p>
 </div>
 </body>
 </html>
