--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
     }
     </style>    
 </head>
-
+<body onload="console.log('Umm is there a reason for you to be in the console?')">
+<body onload="console.log('You probably should leave the console now.')">
+<body onload="console.log('STOP READING NOW!!!!!')">
+<body onload="console.log('Fine. I warned you.')">
+<body onload="console.log('https://ajchen.page.link/nwTQ')"> 
 <body>
 <div>
     <h1>Future home of something cool</h1>
