--- a/assets/function-pages/kiosk-sessionend.html
+++ b/assets/function-pages/kiosk-sessionend.html
@@ -1,1 +1,10 @@
-<body onload="window.close();">
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+	<body onload="window.close();">
+</head>
+<body>
+
+</body>
+</html>
