--- a/kiosk/homepage.html
+++ b/kiosk/homepage.html
@@ -40,13 +40,12 @@
     <h1>Welcome to the Kiosk!</h1>
     <p>You are logged in to the CZ Kiosk! Contact IT at <a href="https://ajchen.page.link/eBWp">219.552.1088</a> with any questions.</p>
 	<p>The Chen Family is not liable for any of your actions on this computer. By navigating away from this page, you are agreeing to the kiosk <a href="/terms">Terms of Use</a> and <a href="/privacy">Privacy Policy</a>.</p>
-	<p>This kiosk session will end after five minutes of inactivity. Log out when you are finished by closing the window or <a href="/assets/function-pages/kiosk-sessionend">clicking here</a>.</p>
+	<p>This kiosk session will end after five minutes of inactivity. Log out when you are finished by closing the window.</p>
 	<br>
 	<p><strong>Quick Links</strong></p>
     <p><a href="https://ajchen.page.link/MPV4">> Google</a></p>
 	<p><a href="/contact">> Contact Me</a></p>
 	<p><a href="/">> AJC Homepage</a></p>
-	<p><a href="/assets/function-pages/kiosk-sessionend">> End Kiosk Session</a></p>
 </div>
 </body>
 </html>
