--- a/kiosk/homepage.html
+++ b/kiosk/homepage.html
@@ -41,11 +41,40 @@
     <p>You are logged in to the CZ Kiosk! Contact IT at <a href="https://ajchen.page.link/eBWp">219.552.1088</a> with any questions.</p>
 	<p>The Chen Family is not liable for any of your actions on this computer. By navigating away from this page, you are agreeing to the kiosk <a href="/terms">Terms of Use</a> and <a href="/privacy">Privacy Policy</a>.</p>
 	<p>This kiosk session will end after five minutes of inactivity. Log out when you are finished by closing the window.</p>
-	<br>
-	<p><strong>Quick Links</strong></p>
-    <p><a href="https://ajchen.page.link/MPV4">> Google</a></p>
-	<p><a href="/contact">> Contact Me</a></p>
-	<p><a href="/">> AJC Homepage</a></p>
+    <table style="height: 72px; width: 100%; border-collapse: collapse; border-style: hidden;" border="0">
+<table style="height: 126px; width: 100%; border-collapse: collapse; border-style: hidden;" border="0">
+<tbody>
+<p><strong>Quick Links</strong></p>
+<tr style="height: 18px;">
+<td style="width: 50%; height: 18px;"><a href="https://ajchen.page.link/MPV4" target="_blank" rel="noopener">&gt; Google</a></td>
+<td style="width: 50%; height: 18px;"><a href="https://ajchen.page.link/1Vug" target="_blank" rel="noopener">&gt; Gmail</a></td>
+</tr>
+<tr style="height: 18px;">
+<td style="width: 50%; height: 18px;"><a href="https://ajchen.page.link/biyV" target="_blank" rel="noopener">&gt; Amazon</a></td>
+<td style="width: 50%; height: 18px;"><a href="https://ajchen.page.link/sFFX" target="_blank" rel="noopener">&gt; Apple News</a></td>
+</tr>
+<tr style="height: 18px;">
+<td style="width: 50%; height: 18px;"><a href="https://ajchen.page.link/zb6v" target="_blank" rel="noopener">&gt; Facebook</a></td>
+<td style="width: 50%; height: 18px;"><a href="https://ajchen.page.link/wG4N" target="_blank" rel="noopener">&gt; YouTube</a></td>
+</tr>
+<tr style="height: 18px;">
+<td style="width: 50%; height: 18px;"><a href="https://ajchen.page.link/uZpX" target="_blank" rel="noopener">&gt; Twitter</a></td>
+<td style="width: 50%; height: 18px;"><a href="https://ajchen.page.link/712L" target="_blank" rel="noopener">&gt; Instagram</a></td>
+</tr>
+<tr style="height: 18px;">
+<td style="width: 50%; height: 18px;"><a href="https://ajchen.page.link/ghra" target="_blank" rel="noopener">&gt; Google Drive</a></td>
+<td style="width: 50%; height: 18px;"><a href="https://ajchen.page.link/2MtP" target="_blank" rel="noopener">&gt; Dropbox</a></td>
+</tr>
+<tr style="height: 18px;">
+<td style="width: 50%; height: 18px;"><a href="/terms" target="_blank" rel="noopener">&gt; Kiosk Terms of Use</a></td>
+<td style="width: 50%; height: 18px;"><a href="/privacy" target="_blank" rel="noopener">&gt; Kiosk Privacy Policy</a></td>
+</tr>
+<tr style="height: 18px;">
+<td style="width: 50%; height: 18px;"><a href="/contact" target="_blank" rel="noopener">&gt; Contact Me</a></td>
+<td style="width: 50%; height: 18px;"><a href="/" target="_blank" rel="noopener">&gt; AJC Homepage</a></td>
+</tr>
+</tbody>
+</table>
 </div>
 </body>
 </html>
