--- a/index.html
+++ b/index.html
@@ -39,11 +39,27 @@
     <h1>Future home of something cool</h1>
     <p>This website isn't finished yet, check back later!</p>
 	<p>Looking for a specific page? Type the link in the URL bar to view it!</p>
-	<br>
-	<p><strong>Quick Links</strong></p>
-	<p><a href="/sitemap.xml">> Sitemap</a></p>
-	<p><a href="/contact">> Contact Me</a></p>
-	<p><a href="https://ajchen.page.link/MPV4">> Google</a></p>
+<table style="height: 72px; width: 100%; border-collapse: collapse; border-style: hidden;" border="0">
+<tbody>
+<p><strong>Quick Links</strong></p>
+<tr style="height: 18px;">
+<td style="width: 50%; height: 18px;"><a href="/sitemap.xml" target="_blank" rel="noopener">&gt; Sitemap</a></td>
+<td style="width: 50%; height: 18px;"><a href="https://ajchen.page.link/F5sf" target="_blank" rel="noopener">&gt; Twitter</a></td>
+</tr>
+<tr style="height: 18px;">
+<td style="width: 50%; height: 18px;"><a href="https://ajchen.page.link/PJwN" target="_blank" rel="noopener">&gt; Facebook</a></td>
+<td style="width: 50%; height: 18px;"><a href="https://ajchen.page.link/JiCq" target="_blank" rel="noopener">&gt; Instagram</a></td>
+</tr>
+<tr style="height: 18px;">
+<td style="width: 50%; height: 18px;"><a href="/terms" target="_blank" rel="noopener">&gt; Terms and Conditions</a></td>
+<td style="width: 50%; height: 18px;"><a href="/privacy" target="_blank" rel="noopener">&gt; Privacy Policy</a></td>
+</tr>
+<tr style="height: 18px;">
+<td style="width: 50%; height: 18px;"><a href="/contact" target="_blank" rel="noopener">&gt; Contact Me</a></td>
+<td style="width: 50%; height: 18px;"><a href="/assets/media/images/rickrolled.jpg" target="_blank" rel="noopener">&gt; Cool Stuff</a></td>
+</tr>
+</tbody>
+</table>
 </div>
 </body>
 </html>
