--- a/assets/sitemaps/assets.xml.html
+++ b/assets/sitemaps/assets.xml.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Sitemap Picker</title>
+    <title>Asset Sitemap</title>
 
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
@@ -37,8 +37,25 @@
 
 <body>
 <div>
-    <h1>Choose a Sitemap</h1>
-    <p>Select a sitemap from the list below.</p>
+    <h1>Asset Sitemap</h1>
+    <p><a href="/sitemap.xml">> All Sitemaps</a></p>
+<p><strong>Media/Images</strong></p>
+<table style="height: 34px; width: 100%; border-collapse: collapse; border-style: hidden;" border="0">
+<tbody>
+<tr style="height: 18px;">
+<td style="width: 50%; height: 18px;"><a href="/assets/media/images/404-pnf.png">&gt; 404-pnf.png</a></td>
+<td style="width: 50%; height: 18px;"><a href="/assets/media/images/rickrolled.jpg">&gt; rickrolled.jpg</a></td>
+</tr>
+<tr style="height: 18px;">
+<td style="width: 50%; height: 16px;"><a href="/assets/media/images/loading.gif">&gt; loading.gif</a></td>
+<td style="width: 50%; height: 16px;">&nbsp;</td>
+</tr>
+</tbody>
+</table>
+<p><strong>Media/Videos</strong></p>
+<p><em>This folder is empty.</em></p>
+<p><strong>Miscellaneous (Misc)</strong></p>
+<p><em>This folder is empty.</em></p>
 </div>
 </body>
 </html>
