--- a/assets/sitemaps/style.xml.html
+++ b/assets/sitemaps/style.xml.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Main Sitemap</title>
+    <title>Style Sitemap</title>
 
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
@@ -37,21 +37,13 @@
 
 <body>
 <div>
-    <h1>Main Sitemap</h1>
+    <h1>Style Sitemap</h1>
     <p><a href="/sitemap.xml">> All Sitemaps</a></p>
-<table style="height: 72px; width: 100%; border-collapse: collapse; border-style: hidden;" border="0">
+<table style="height: 18px; width: 100%; border-collapse: collapse; border-style: hidden;" border="0">
 <tbody>
 <tr style="height: 18px;">
-<td style="width: 50%; height: 18px;"><a href="/404.html">&gt; Error 404</a></td>
-<td style="width: 50%; height: 18px;"><a href="/contact">&gt; Contact</a></td>
-</tr>
-<tr style="height: 18px;">
-<td style="width: 50%; height: 18px;"><a href="/">&gt; Index</a></td>
-<td style="width: 50%; height: 18px;"><a href="/sitemap.xml">&gt; Sitemap</a></td>
-</tr>
-<tr style="height: 18px;">
-<td style="width: 50%; height: 18px;"><a href="/contact">&gt; Contact Me</a></td>
-<td style="width: 50%; height: 18px;">&nbsp;</td>
+<td style="width: 50%; height: 18px;"><a href="/style/bootstrap.css">&gt; bootstrap.css</a></td>
+<td style="width: 50%; height: 18px;"><a href="/style/cover.css">&gt; cover.css</a></td>
 </tr>
 </tbody>
 </table>
