--- a/sitemap.xml.html
+++ b/sitemap.xml.html
@@ -38,7 +38,22 @@
 <body>
 <div>
     <h1>Choose a Sitemap</h1>
-    <p>Select a sitemap from the list below.</p>
+	<table style="height: 54px; width: 100%; border-collapse: collapse; border-style: hidden;" border="0">
+<tbody>
+<tr style="height: 18px;">
+<td style="width: 50%; height: 18px;"><a href="/assets/sitemaps/main.xml">&gt; Main</a></td>
+<td style="width: 50%; height: 18px;"><a href="/assets/sitemaps/assets.xml">&gt; Assets</a></td>
+</tr>
+<tr style="height: 18px;">
+<td style="width: 50%; height: 18px;"><a href="/assets/sitemaps/style.xml">&gt; Style</a></td>
+<td style="width: 50%; height: 18px;"><a href="/assets/sitemaps/policies.xml">&gt; Policy</a></td>
+</tr>
+<tr style="height: 18px;">
+<td style="width: 50%; height: 18px;"><a href="/assets/sitemaps/kiosk.xml">&gt; Kiosk</a></td>
+<td style="width: 50%; height: 18px;">&nbsp;</td>
+</tr>
+</tbody>
+</table>
 </div>
 </body>
 </html>
