--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <tbody>
 <p><strong>Quick Links</strong></p>
 <tr style="height: 18px;">
-<td style="width: 50%; height: 18px;"><a href="/sitemap.xml" target="_blank" rel="noopener">&gt; Sitemap</a></td>
+<td style="width: 50%; height: 18px;"><a href="/cool-stuff" target="_blank" rel="noopener">&gt; Cool Stuff</a></td>
 <td style="width: 50%; height: 18px;"><a href="https://ajchen.page.link/F5sf" target="_blank" rel="noopener">&gt; Twitter</a></td>
 </tr>
 <tr style="height: 18px;">
@@ -56,7 +56,6 @@
 </tr>
 <tr style="height: 18px;">
 <td style="width: 50%; height: 18px;"><a href="/contact" target="_blank" rel="noopener">&gt; Contact Me</a></td>
-<td style="width: 50%; height: 18px;"><a href="/assets/media/images/rickrolled.jpg" target="_blank" rel="noopener">&gt; Cool Stuff</a></td>
 </tr>
 </tbody>
 </table>
