Added translate support!

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+<!-- Hi y'all! ;) -->
+<!-- Welcome to my website, hope you enjoy it! -->
+<!-- Oh, and go to https://andrew-j-chen.github.io/kinda-sus-link/ for something really cool! -->
 <head>
     <title>Website in the Making!</title>
 
@@ -56,6 +59,7 @@
 </tr>
 <tr style="height: 18px;">
 <td style="width: 50%; height: 18px;"><a href="/contact" target="_blank" rel="noopener">&gt; Contact Me</a></td>
+<td style="width: 50%; height: 18px;"><a href="https://ajchen.page.link/fmCT" target="_blank" rel="noopener">&gt; Translate this Page</a></td>
 </tr>
 </tbody>
 </table>
