--- a/index.html
+++ b/index.html
@@ -1,14 +1,49 @@
 <!DOCTYPE html>
 <html>
-<!-- Hi y'all! ;) -->
-<!-- Welcome to my website, hope you enjoy it! -->
-<!-- Oh, and go to https://andrew-j-chen.github.io/kinda-sus-link/ for something really cool! -->
 <head>
-    <title>Website in the Making!</title>
+    <title>Redirecting...</title>
 
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+	        <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="https://cdn.glitch.com/e70aa3d6-9915-40c6-8e65-f9e5c1ca93d4%2Fapple-touch-icon.png?v=1614019467028"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="https://cdn.glitch.com/e70aa3d6-9915-40c6-8e65-f9e5c1ca93d4%2Ffavicon-32x32.png?v=1614019084028"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="https://cdn.glitch.com/e70aa3d6-9915-40c6-8e65-f9e5c1ca93d4%2Ffavicon-16x16.png?v=1614019112426"
+    />
+    <link
+      rel="manifest"
+      href="https://cdn.glitch.com/e70aa3d6-9915-40c6-8e65-f9e5c1ca93d4%2Fsite.webmanifest?v=1614020328661"
+    />
+    <link
+      rel="mask-icon"
+      href="https://cdn.glitch.com/e70aa3d6-9915-40c6-8e65-f9e5c1ca93d4%2Fsafari-pinned-tab.svg?v=1614019371123"
+      color="#5bbad5"
+    />
+    <link
+      rel="shortcut icon"
+      href="https://cdn.glitch.com/e70aa3d6-9915-40c6-8e65-f9e5c1ca93d4%2Ffavicon.ico?v=1614018970968"
+    />
+    <meta name="apple-mobile-web-app-title" content="AJC" />
+    <meta name="application-name" content="AJC" />
+    <meta name="msapplication-TileColor" content="#24678d" />
+    <meta
+      name="msapplication-config"
+      content="https://cdn.glitch.com/e70aa3d6-9915-40c6-8e65-f9e5c1ca93d4%2Fmsconfig.xml?v=1614020165860"
+    />
+    <meta name="theme-color" content="#24678d" />
     <style type="text/css">
     body {
         background-color: #f0f0f2;
@@ -37,32 +72,13 @@
     }
     </style>    
 </head>
+
 <body>
 <div>
-    <h1>Future home of something cool</h1>
-    <p>This website isn't finished yet, check back later!</p>
-	<p>Looking for a specific page? Type the link in the URL bar to view it!</p>
-<table style="height: 72px; width: 100%; border-collapse: collapse; border-style: hidden;" border="0">
-<tbody>
-<p><strong>Quick Links</strong></p>
-<tr style="height: 18px;">
-<td style="width: 50%; height: 18px;"><a href="/kinda-sus-link" target="_blank" rel="noopener">&gt; Cool Stuff</a></td>
-<td style="width: 50%; height: 18px;"><a href="https://ajchen.page.link/F5sf" target="_blank" rel="noopener">&gt; Twitter</a></td>
-</tr>
-<tr style="height: 18px;">
-<td style="width: 50%; height: 18px;"><a href="https://ajchen.page.link/PJwN" target="_blank" rel="noopener">&gt; Facebook</a></td>
-<td style="width: 50%; height: 18px;"><a href="https://ajchen.page.link/JiCq" target="_blank" rel="noopener">&gt; Instagram</a></td>
-</tr>
-<tr style="height: 18px;">
-<td style="width: 50%; height: 18px;"><a href="/terms" target="_blank" rel="noopener">&gt; Terms and Conditions</a></td>
-<td style="width: 50%; height: 18px;"><a href="/privacy" target="_blank" rel="noopener">&gt; Privacy Policy</a></td>
-</tr>
-<tr style="height: 18px;">
-<td style="width: 50%; height: 18px;"><a href="/contact" target="_blank" rel="noopener">&gt; Contact Me</a></td>
-<td style="width: 50%; height: 18px;"><a href="https://ajchen.page.link/fmCT" target="_blank" rel="noopener">&gt; Translate this Page</a></td>
-</tr>
-</tbody>
-</table>
+    <h1>Redirecting you Now!</h1>
+    <p>This website has been moved. Redirecting you to the new one now!</p>
+    <p><a href="https://ajc.glitch.me/">Redirect not working? Click here!</a></p>
+	  <meta http-equiv="Refresh" content="0; url='https://ajc.glitch.me/'" />
 </div>
 </body>
 </html>
