--- a/kinda-sus-link.html
+++ b/kinda-sus-link.html
@@ -1,4 +1,84 @@
 <!DOCTYPE html>
 <html>
-<meta http-equiv="Refresh" content="0; url='/assets/media/images/rickrolled.jpg'" />
+<head>
+    <title>Redirecting...</title>
+
+    <meta charset="utf-8" />
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+	        <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="https://cdn.glitch.com/e70aa3d6-9915-40c6-8e65-f9e5c1ca93d4%2Fapple-touch-icon.png?v=1614019467028"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="https://cdn.glitch.com/e70aa3d6-9915-40c6-8e65-f9e5c1ca93d4%2Ffavicon-32x32.png?v=1614019084028"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="https://cdn.glitch.com/e70aa3d6-9915-40c6-8e65-f9e5c1ca93d4%2Ffavicon-16x16.png?v=1614019112426"
+    />
+    <link
+      rel="manifest"
+      href="https://cdn.glitch.com/e70aa3d6-9915-40c6-8e65-f9e5c1ca93d4%2Fsite.webmanifest?v=1614020328661"
+    />
+    <link
+      rel="mask-icon"
+      href="https://cdn.glitch.com/e70aa3d6-9915-40c6-8e65-f9e5c1ca93d4%2Fsafari-pinned-tab.svg?v=1614019371123"
+      color="#5bbad5"
+    />
+    <link
+      rel="shortcut icon"
+      href="https://cdn.glitch.com/e70aa3d6-9915-40c6-8e65-f9e5c1ca93d4%2Ffavicon.ico?v=1614018970968"
+    />
+    <meta name="apple-mobile-web-app-title" content="AJC" />
+    <meta name="application-name" content="AJC" />
+    <meta name="msapplication-TileColor" content="#24678d" />
+    <meta
+      name="msapplication-config"
+      content="https://cdn.glitch.com/e70aa3d6-9915-40c6-8e65-f9e5c1ca93d4%2Fmsconfig.xml?v=1614020165860"
+    />
+    <meta name="theme-color" content="#24678d" />
+    <style type="text/css">
+    body {
+        background-color: #f0f0f2;
+        margin: 0;
+        padding: 0;
+        font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        
+    }
+    div {
+        width: 600px;
+        margin: 5em auto;
+        padding: 2em;
+        background-color: #fdfdff;
+        border-radius: 0.5em;
+        box-shadow: 2px 3px 7px 2px rgba(0,0,0,0.02);
+    }
+    a:link, a:visited {
+        color: #38488f;
+        text-decoration: none;
+    }
+    @media (max-width: 700px) {
+        div {
+            margin: 0 auto;
+            width: auto;
+        }
+    }
+    </style>    
+</head>
+
+<body>
+<div>
+    <h1>Redirecting you Now!</h1>
+    <p>This website has been moved. Redirecting you to the new one now!</p>
+    <p><a href="https://ajc.glitch.me/kinda-sus-link.html/">Redirect not working? Click here!</a></p>
+	  <meta http-equiv="Refresh" content="0; url='https://ajc.glitch.me/kinda-sus-link.html/'" />
+</div>
+</body>
 </html>
