--- a/msgcrypt.html
+++ b/msgcrypt.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Redirecting...</title>
-
+	<meta http-equiv="Refresh" content="0; url='https://ajc.glitch.me/msgcrypt.html'" />
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
