--- a/kinda-sus-link.html
+++ b/kinda-sus-link.html
@@ -77,8 +77,8 @@
 <div>
     <h1>Redirecting you Now!</h1>
     <p>This website has been moved. Redirecting you to the new one now!</p>
-    <p><a href="https://ajc.glitch.me/kinda-sus-link.html">Redirect not working? Click here!</a></p>
-	  <meta http-equiv="Refresh" content="0; url='https://ajc.glitch.me/kinda-sus-link.html'" />
+    <p><a href="https://www.andrewjchen.com/kinda-sus-link.html">Redirect not working? Click here!</a></p>
+	  <meta http-equiv="Refresh" content="0; url='https://www.andrewjchen.com/kinda-sus-link.html'" />
 </div>
 </body>
 </html>
