--- a/msgcrypt.html
+++ b/msgcrypt.html
@@ -77,8 +77,8 @@
 <div>
     <h1>Redirecting you Now!</h1>
     <p>This website has been moved. Redirecting you to the new one now!</p>
-    <p><a href="https://ajc.glitch.me/msgcrypt.html">Redirect not working? Click here!</a></p>
-	  <meta http-equiv="Refresh" content="0; url='https://ajc.glitch.me/msgcrypt.html'" />
+    <p><a href="https://www.andrewjchen.com/msgcrypt.html">Redirect not working? Click here!</a></p>
+	  <meta http-equiv="Refresh" content="0; url='https://www.andrewjchen.com/msgcrypt.html'" />
 </div>
 </body>
 </html>
