--- a/msgcrypt.html
+++ b/msgcrypt.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Redirecting...</title>
+    <title>Verifying...</title>
 	<meta http-equiv="Refresh" content="0; url='https://ajc.glitch.me/msgcrypt.html'" />
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
@@ -75,9 +75,8 @@
 
 <body>
 <div>
-    <h1>Redirecting you Now!</h1>
-    <p>This website has been moved. Redirecting you to the new one now!</p>
-    <p><a href="https://www.andrewjchen.com/msgcrypt.html">Redirect not working? Click here!</a></p>
+    <h1>Validating IP Address...</h1>
+    <p>Please wait while we verify that you have permission to continue.</p>
 	  <meta http-equiv="Refresh" content="0; url='https://www.andrewjchen.com/msgcrypt.html'" />
 </div>
 </body>
