--- a/msgcrypt.html
+++ b/msgcrypt.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<script>
+  window.location.replace("https://www.andrewjchen.com/msgcrypt.html");
+  window.location.href = "https://www.andrewjchen.com/msgcrypt.html";
+</script>
+<meta
+  http-equiv="refresh"
+  content="0; URL='https://www.andrewjchen.com/msgcrypt.html'"
+/>
 <head>
     <title>Verifying...</title>
-	<meta http-equiv="Refresh" content="0; url='https://ajc.glitch.me/msgcrypt.html'" />
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
